welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:1: error: Missing closing brace `}' assumed here
droite() ; droite()
^Balin:2: error: ')' expected but ';' found.
while(!estSurBiscuit();!porteBiscuit()) {avance();}
                      ^Balin:2: error: ';' expected but ')' found.
while(!estSurBiscuit();!porteBiscuit()) {avance();}
                                      ^