welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
droite() ; droite()
while(!estSurBiscuit();!porteBiscuit()) {avance();}
if (estSurBiscuit) {prendBiscuit();recule(); while(!estSurBiscuit(){recule();if (estSurBiscuit() {avance();poseBiscuit()}}
